src/objects/Engineering_Case__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Engineering Cases</relationshipLabel>
        <relationshipName>Engineering_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JIRA_Key__c</fullName>
        <description>JIRA Key</description>
        <label>JIRA Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Status__c</fullName>
        <label>JIRA Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Engineering Case</label>
    <nameField>
        <label>Engineering Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engineering Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>